--- a/templates/base.html
+++ b/templates/base.html
@@ -142,12 +142,11 @@
 
             <div class="hidden md:block lg ml-1">
                   <a href="/?lang=bn"
-                    class="py-2 btn btn-ghost hover:text-navbar-hover rounded-lg cursor-pointer pl-2 text-sm active text-navbar-active transition-all ease-in-out duration-200"
+                    class="py-2 btn btn-ghost hover:text-navbar-hover {% if request.session.lang == 'bn' %} text-navbar-active {% endif %}  rounded-lg cursor-pointer pl-2 text-sm active transition-all ease-in-out duration-200"
                     >বাংলা</a
                   >/<a href="/?lang=en"
-                    class="hover:text-navbar-hover btn btn-ghost text-sm py-2 pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
-                    >English</a
-                  >
+                    class="hover:text-navbar-hover btn btn-ghost  {% if request.session.lang == 'en' %} text-navbar-active {% endif %} text-sm py-2 pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
+                    >English</a>
             </div>
 
           </div>
@@ -171,11 +170,16 @@
               <ul
                 tabindex="0"
                 id="profile"
-                class="absolute right-5 top-12 hidden menu menu-sm bg-stone-200 rounded-b-md z-[1] mt-3 w-52 p-2 shadow text-2xl space-y-2">
-                <li><a>Mohammad Saikat Islam</a></li>
-                <li><a>01521771635</a></li>
+                class="absolute right-5 top-12 hidden menu menu-sm bg-stone-200 rounded-b-md z-[1] mt-3 w-48 p-2 shadow text-2xl space-y-0">
+                <li><a> {{ request.user.fullname }}</a></li>
+                <li><a> {{ request.user.number }} </a></li>
+                <li><a href="{% url 'customer:reset' %}"
+                  class="py-1 mt-3 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
+                  >
+                  {% if request.session.lang == 'en' %} Reset Password {% else %} রিসেট পাসওয়ার্ড {% endif %}
+                </a></li>
                 <li><a href="{% url 'customer:logout' %}"
-                  class="py-2 mt-3 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
+                  class="py-1 mt-3 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
                   >
                   {% if request.session.lang == 'en' %} Log Out {% else %} লগ আউট {% endif %}
                 </a></li>
@@ -253,7 +257,7 @@
       <section class="py-6">
         <!-- follow us -->
         <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">
-          {% if request.session.lang == 'en' %}  Follow Us {% else %} কল করুন {% endif %}
+          {% if request.session.lang == 'en' %}  Follow Us {% else %} আমাদের ফলো করুন {% endif %}
         </h3>
         <div class="flex justify-center items-center gap-8">
           <a href="#"><i class="text-4xl text-blue-600 fa-brands fa-facebook"></i></a>
@@ -264,7 +268,7 @@
 
         <!-- contact us -->
         <h3 id="contact_us" class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">
-          {% if request.session.lang == 'en' %}  Contact Us {% else %} আমাদের ফলো করুন{% endif %}
+          {% if request.session.lang == 'en' %}  Contact Us {% else %} যোগাযোগ করুন {% endif %}
         </h3>
         <div class="flex justify-center">
         <div class="space-y-3">
@@ -274,7 +278,8 @@
         </div></div>
       </section>
       <section class="bg-neutral-900 py-8">
-        <p class="text-center text-lg text-primary-text/70">@VashaAcademy 2024| All Rights Reserved</p>
+        <p class="text-center text-lg text-primary-text/70 mb-3">@VashaAcademy 2024 | All Rights Reserved</p>
+        <p class="text-center text-md text-primary-text/80">Developed by: <a href="mailto:saikatislam709@gmail.com" class="underline">Saikat Islam</a></p>
       </section>
     </footer>
   </body>
