--- a/templates/verification.html
+++ b/templates/verification.html
@@ -8,7 +8,7 @@
 
 
 {% block body %}
-    <!-- component -->
+
 
 <!-- component -->
 <div class="relative bg-transparent flex min-h-screen px-6 flex-col justify-center overflow-hidden bg-gray-50 py-3">
@@ -29,25 +29,32 @@
 
       <div>
         <form action="" method="post">
+          {% csrf_token %}
           <div class="flex flex-col mt-3 space-y-5">
             <div class="flex flex-row items-center justify-between mx-auto w-full max-w-xs">
-              <div class="w-16 h-16 ">
-                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">
+<!--              <div class="w-16 h-16 ">-->
+<!--                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">-->
+<!--              </div>-->
+<!--              <div class="w-16 h-16 ">-->
+<!--                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">-->
+<!--              </div>-->
+<!--              <div class="w-16 h-16 ">-->
+<!--                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">-->
+<!--              </div>-->
+<!--              <div class="w-16 h-16 ">-->
+<!--                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">-->
+<!--              </div>-->
+               <div class="w-39 h-14 ">
+                <input name="code" maxlength="6" required
+                       oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                       type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" id="code">
               </div>
-              <div class="w-16 h-16 ">
-                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">
-              </div>
-              <div class="w-16 h-16 ">
-                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">
-              </div>
-              <div class="w-16 h-16 ">
-                <input maxlength="1" type="number" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" type="text" name="" id="">
-              </div>
+               </div>
             </div>
 
-            <div class="flex flex-col space-y-5">
+            <div class="flex flex-col space-y-3">
               <div>
-                <button class="flex flex-row items-center justify-center text-center w-full border rounded-xl outline-none py-3 bg-blue-700 border-none text-white text-sm shadow-sm">
+                <button class="flex flex-row mt-4 items-center justify-center text-center w-full border rounded-xl outline-none py-3 bg-blue-700 border-none text-white text-sm shadow-sm">
                   Verify Account
                 </button>
               </div>
@@ -56,8 +63,19 @@
                 <p>Didn't recieve code?</p> <a class="flex flex-row items-center text-blue-600" href="http://" target="_blank" rel="noopener noreferrer">Resend</a>
               </div>
             </div>
-          </div>
-        </form>
+          {% if error %}
+            <div class="flex items-center w-65 p-4 mb-4 mt-5 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+                  <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                  </svg>
+                  <span class="sr-only">Info</span>
+                  <div>
+                    <span class="font-medium"> {{ error }} !</span>
+                  </div>
+            </div>
+            {% endif %}
+          </form>
+        </div>
       </div>
     </div>
   </div>
